build: gera arquivos minificados e atualiza HTML para produção

--- a/public/projetos.html
+++ b/public/projetos.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style.min.css" />
 
     <title>Mãos que Ajudam - Projetos e Voluntariado</title>
   </head>
@@ -116,6 +116,7 @@
         </p>
       </div>
     </footer>
-    <script src="../js/script.js"></script>
+
+    <script src="../js/script.min.js"></script>
   </body>
 </html>
