--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style.min.css" />
 
     <title>Mãos que Ajudam - Cadastro de Voluntário</title>
   </head>
@@ -69,7 +69,7 @@
           </p>
 
           <div id="form-mensagem-sucesso" class="mensagem-sucesso" role="alert" style="display: none;">
-             Cadastro enviado com sucesso! Entraremos em contato em breve.
+            Cadastro enviado com sucesso! Entraremos em contato em breve.
           </div>
 
           <form
@@ -88,22 +88,22 @@
               <div>
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" required placeholder="seuemail@dominio.com" class="campo-entrada"/>
-                 <span class="mensagem-erro" aria-live="polite"></span>
+                <span class="mensagem-erro" aria-live="polite"></span>
               </div>
               <div>
                 <label for="cpf">CPF:</label>
                 <input type="text" id="cpf" name="cpf" required pattern="[0-9]{3}\.[0-9]{3}\.[0-9]{3}-[0-9]{2}" title="Formato: 000.000.000-00" placeholder="000.000.000-00" class="campo-entrada"/>
-                 <span class="mensagem-erro" aria-live="polite"></span>
+                <span class="mensagem-erro" aria-live="polite"></span>
               </div>
              <div>
                 <label for="telefone">Telefone:</label>
                 <input type="tel" id="telefone" name="telefone" required pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}" title="Formato: (00) 00000-0000" placeholder="(00) 00000-0000" class="campo-entrada"/>
-                 <span class="mensagem-erro" aria-live="polite"></span>
+                <span class="mensagem-erro" aria-live="polite"></span>
              </div>
               <div>
                 <label for="nascimento">Data de Nascimento:</label>
                 <input type="date" id="nascimento" name="nascimento" required class="campo-entrada"/>
-                 <span class="mensagem-erro" aria-live="polite"></span>
+                <span class="mensagem-erro" aria-live="polite"></span>
               </div>
             </fieldset>
             <fieldset>
@@ -111,17 +111,17 @@
               <div>
                 <label for="cep">CEP:</label>
                 <input type="text" id="cep" name="cep" required pattern="[0-9]{5}-[0-9]{3}" title="Formato: 00000-000" placeholder="00000-000" class="campo-entrada"/>
-                 <span class="mensagem-erro" aria-live="polite"></span>
+                <span class="mensagem-erro" aria-live="polite"></span>
               </div>
              <div>
                 <label for="endereco">Endereço (Rua e Nº):</label>
                 <input type="text" id="endereco" name="endereco" required class="campo-entrada"/>
-                 <span class="mensagem-erro" aria-live="polite"></span>
+                <span class="mensagem-erro" aria-live="polite"></span>
              </div>
               <div>
                 <label for="cidade">Cidade:</label>
                 <input type="text" id="cidade" name="cidade" required class="campo-entrada"/>
-                 <span class="mensagem-erro" aria-live="polite"></span>
+                <span class="mensagem-erro" aria-live="polite"></span>
               </div>
               <div>
                 <label for="estado">Estado:</label>
@@ -155,7 +155,7 @@
                     <option value="SE">Sergipe</option>
                     <option value="TO">Tocantins</option>
                 </select>
-                 <span class="mensagem-erro" aria-live="polite"></span>
+                <span class="mensagem-erro" aria-live="polite"></span>
               </div>
             </fieldset>
             <button type="submit" class="botao botao-primario">
@@ -175,6 +175,7 @@
         </p>
       </div>
     </footer>
-    <script src="../js/script.js"></script>
+
+    <script src="../js/script.min.js"></script>
   </body>
 </html>
