--- a/public/cadastro.min.html
+++ b/public/cadastro.min.html
@@ -5,9 +5,9 @@
 <meta name=viewport content="width=device-width, initial-scale=1.0" />
 <meta name=description content="Cadastre-se como voluntário na Mãos que Ajudam. Preencha o formulário e faça parte da nossa equipe." />
 <link rel=icon href=../imagens/favicon.png type=image/png />
-<link rel=preconnect href=https://fonts.googleapis.com />
-<link rel=preconnect href=https://fonts.gstatic.com crossorigin />
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel=stylesheet />
+<link rel=preconnect href=https://fonts.googleapis.com>
+<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel=stylesheet>
 <link rel=stylesheet href=../css/style.css />
 <title>Mãos que Ajudam - Cadastro de Voluntário</title>
 </head>
@@ -24,7 +24,17 @@
 <nav aria-label="Navegação principal" id=navegacaoPrincipal>
 <ul>
 <li><a href=index.html>Início</a></li>
-<li><a href=projetos.html>Projetos</a></li>
+<li class=dropdown>
+<a href=projetos.html class=dropdown-toggle aria-haspopup=true aria-expanded=false id=projetos-menu-link>
+Projetos
+</a>
+<ul class=submenu aria-labelledby=projetos-menu-link>
+<li><a href=projetos.html#projeto-educacao>Educação para o Futuro</a></li>
+<li><a href=projetos.html#projeto-comunidade>Ação Comunitária</a></li>
+<li><hr class=submenu-divisor></li>
+<li><a href=projetos.html>Ver Todos os Projetos</a></li>
+</ul>
+</li>
 <li><a href=cadastro.html>Cadastro</a></li>
 </ul>
 </nav>
@@ -38,32 +48,35 @@
 Ficamos muito felizes com seu interesse! Por favor, preencha o
 formulário abaixo para entrarmos em contato.
 </p>
+<div id=form-mensagem-sucesso class=mensagem-sucesso role=alert style=display:none>
+Cadastro enviado com sucesso! Entraremos em contato em breve.
+</div>
 <form action=# method=post class=formulario-cadastro id=formCadastro>
 <fieldset>
 <legend>Dados Pessoais</legend>
 <div>
 <label for=nome>Nome Completo:</label>
-<input type=text id=nome name=nome required class=campo-entrada />
+<input type=text id=nome name=nome required class="campo-entrada"/>
 <span class=mensagem-erro aria-live=polite></span>
 </div>
 <div>
 <label for=email>E-mail:</label>
-<input type=email id=email name=email required placeholder=seuemail@dominio.com class=campo-entrada />
+<input type=email id=email name=email required placeholder=seuemail@dominio.com class="campo-entrada"/>
 <span class=mensagem-erro aria-live=polite></span>
 </div>
 <div>
 <label for=cpf>CPF:</label>
-<input type=text id=cpf name=cpf required pattern=[0-9]{3}\.[0-9]{3}\.[0-9]{3}-[0-9]{2} title="Formato: 000.000.000-00" placeholder=000.000.000-00 class=campo-entrada />
+<input type=text id=cpf name=cpf required pattern=[0-9]{3}\.[0-9]{3}\.[0-9]{3}-[0-9]{2} title="Formato: 000.000.000-00" placeholder=000.000.000-00 class="campo-entrada"/>
 <span class=mensagem-erro aria-live=polite></span>
 </div>
 <div>
 <label for=telefone>Telefone:</label>
-<input type=tel id=telefone name=telefone required pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}" title="Formato: (00) 00000-0000" placeholder="(00) 00000-0000" class=campo-entrada />
+<input type=tel id=telefone name=telefone required pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}" title="Formato: (00) 00000-0000" placeholder="(00) 00000-0000" class="campo-entrada"/>
 <span class=mensagem-erro aria-live=polite></span>
 </div>
 <div>
 <label for=nascimento>Data de Nascimento:</label>
-<input type=date id=nascimento name=nascimento required class=campo-entrada />
+<input type=date id=nascimento name=nascimento required class="campo-entrada"/>
 <span class=mensagem-erro aria-live=polite></span>
 </div>
 </fieldset>
@@ -71,22 +84,51 @@ formulário abaixo para entrarmos em contato.
 <legend>Endereço</legend>
 <div>
 <label for=cep>CEP:</label>
-<input type=text id=cep name=cep required pattern=[0-9]{5}-[0-9]{3} title="Formato: 00000-000" placeholder=00000-000 class=campo-entrada />
+<input type=text id=cep name=cep required pattern=[0-9]{5}-[0-9]{3} title="Formato: 00000-000" placeholder=00000-000 class="campo-entrada"/>
 <span class=mensagem-erro aria-live=polite></span>
 </div>
 <div>
 <label for=endereco>Endereço (Rua e Nº):</label>
-<input type=text id=endereco name=endereco required class=campo-entrada />
+<input type=text id=endereco name=endereco required class="campo-entrada"/>
 <span class=mensagem-erro aria-live=polite></span>
 </div>
 <div>
 <label for=cidade>Cidade:</label>
-<input type=text id=cidade name=cidade required class=campo-entrada />
+<input type=text id=cidade name=cidade required class="campo-entrada"/>
 <span class=mensagem-erro aria-live=polite></span>
 </div>
 <div>
 <label for=estado>Estado:</label>
-<input type=text id=estado name=estado required class=campo-entrada />
+<select id=estado name=estado required class=campo-entrada>
+<option value>Selecione um estado...</option>
+<option value=AC>Acre</option>
+<option value=AL>Alagoas</option>
+<option value=AP>Amapá</option>
+<option value=AM>Amazonas</option>
+<option value=BA>Bahia</option>
+<option value=CE>Ceará</option>
+<option value=DF>Distrito Federal</option>
+<option value=ES>Espírito Santo</option>
+<option value=GO>Goiás</option>
+<option value=MA>Maranhão</option>
+<option value=MT>Mato Grosso</option>
+<option value=MS>Mato Grosso do Sul</option>
+<option value=MG>Minas Gerais</option>
+<option value=PA>Pará</option>
+<option value=PB>Paraíba</option>
+<option value=PR>Paraná</option>
+<option value=PE>Pernambuco</option>
+<option value=PI>Piauí</option>
+<option value=RJ>Rio de Janeiro</option>
+<option value=RN>Rio Grande do Norte</option>
+<option value=RS>Rio Grande do Sul</option>
+<option value=RO>Rondônia</option>
+<option value=RR>Roraima</option>
+<option value=SC>Santa Catarina</option>
+<option value=SP>São Paulo</option>
+<option value=SE>Sergipe</option>
+<option value=TO>Tocantins</option>
+</select>
 <span class=mensagem-erro aria-live=polite></span>
 </div>
 </fieldset>
