--- a/public/index.min.html
+++ b/public/index.min.html
@@ -5,9 +5,9 @@
 <meta name=viewport content="width=device-width, initial-scale=1.0" />
 <meta name=description content="Mãos que Ajudam — ONG dedicada à educação, saúde e desenvolvimento sustentável. Conheça nossos projetos e como ajudar." />
 <link rel=icon href=../imagens/favicon.png type=image/png />
-<link rel=preconnect href=https://fonts.googleapis.com />
-<link rel=preconnect href=https://fonts.gstatic.com crossorigin />
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel=stylesheet />
+<link rel=preconnect href=https://fonts.googleapis.com>
+<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel=stylesheet>
 <link rel=stylesheet href=../css/style.css />
 <title>Mãos que Ajudam - Página Inicial</title>
 </head>
@@ -24,7 +24,16 @@
 <nav aria-label="Navegação principal" id=navegacaoPrincipal>
 <ul>
 <li><a href=index.html>Início</a></li>
-<li><a href=projetos.html>Projetos</a></li>
+<li class=dropdown>
+<a href=projetos.html class=dropdown-toggle aria-haspopup=true aria-expanded=false id=projetos-menu-link>
+Projetos
+</a>
+<ul class=submenu aria-labelledby=projetos-menu-link>
+<li><a href=projetos.html#projeto-educacao>Educação para o Futuro</a></li>
+<li><a href=projetos.html#projeto-comunidade>Ação Comunitária</a></li>
+<li><hr class=submenu-divisor></li> <li><a href=projetos.html>Ver Todos os Projetos</a></li>
+</ul>
+</li>
 <li><a href=cadastro.html>Cadastro</a></li>
 </ul>
 </nav>
@@ -84,6 +93,16 @@ Crianças participando do projeto de educação.
 Voluntários organizando doações para a comunidade.
 </figcaption>
 </figure>
+</section>
+<section class=secao-video>
+<h2>Veja Nosso Trabalho em Ação</h2>
+<p>
+Um breve vídeo que resume o impacto que nossos voluntários e doadores
+têm na comunidade.
+</p>
+<div class=video-wrapper>
+<iframe width=560 height=315 src=https://www.youtube.com/embed/_MQFJbXyAm4 title="Vídeo institucional inspirador sobre voluntariado" frameborder=0 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 </section>
 </div>
 </main>
